# sfml-hello

./: CMakeLists.txt  NUL
src/: main.cpp
src/game/: Game.cpp  Game.h
src/system/: DLLManager.cpp  DLLManager.h
src/utils/: Config.h  Input.cpp  Input.h  Math.cpp  Math.h
